--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@angularclass/hmr": "^1.2.2",
+    "@angularclass/hmr-loader": "^3.0.2",
+    "@angularclass/idle-preload": "^1.0.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.2",
     "@ngrx/router-store": "^1.2.5",
     "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.2.4",
+    "@ngrx/store-log-monitor": "^3.0.2",
     "core-js": "^2.4.1",
     "ngrx-store-logger": "^0.1.7",
     "rxjs": "^5.0.1",
@@ -33,7 +39,7 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "^2.5.38",
+    "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.68",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
