--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^3.2.4",
     "@ngrx/store-log-monitor": "^3.0.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ngrx-store-logger": "^0.1.7",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
