--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -13,7 +13,8 @@
     "target": "es5",
     "types": [
       "core-js",
-      "node"
+      "node",
+      "hammerjs"
     ],
     "typeRoots": [
       "../node_modules/@types"
